update Input & DX12 code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,7 +78,8 @@
         "geometry": "cpp",
         "clocale": "cpp",
         "condition_variable": "cpp",
-        "cstdarg": "cpp"
+        "cstdarg": "cpp",
+        "optional": "cpp"
     },
     "path-intellisense.mappings": {
         "Asset": "${workspaceRoot}/Asset"
