--- a/Hitagi/Physics/HitagiPhysics/CMakeLists.txt
+++ b/Hitagi/Physics/HitagiPhysics/CMakeLists.txt
@@ -3,9 +3,9 @@ add_subdirectory(Geometries)
 add_library(HitagiPhysics HitagiPhysicsManager.cpp)
 target_link_libraries(HitagiPhysics
     PUBLIC
-        Core
         PhysicsManager
         Geometries
+    PRIVATE
         spdlog::spdlog
 )
 target_include_directories(HitagiPhysics INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
