--- a/Hitagi/GamePlay/CmakeLists.txt
+++ b/Hitagi/GamePlay/CmakeLists.txt
@@ -1,3 +1,3 @@
 add_library(GameLogic GameLogic.cpp)
-target_link_libraries(GameLogic PUBLIC PhysicsManager InputManager GraphicsManager)
+target_link_libraries(GameLogic PUBLIC PhysicsManager InputManager GraphicsManager DebugManager)
 target_include_directories(GameLogic INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
