--- a/Hitagi/Physics/CmakeLists.txt
+++ b/Hitagi/Physics/CmakeLists.txt
@@ -1,4 +1,4 @@
 add_library(PhysicsManager INTERFACE)
 target_include_directories(PhysicsManager INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(PhysicsManager INTERFACE GraphicsManager)
+target_link_libraries(PhysicsManager INTERFACE ResourceManager)
 add_subdirectory(HitagiPhysics)
