--- a/Hitagi/Graphics/DX12/CMakeLists.txt
+++ b/Hitagi/Graphics/DX12/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(D3DRHI
     DynamicDescriptorHeap.cpp
     RootSignature.cpp
     PipelineState.cpp
+    RaytracingHelper.cpp
 )
 target_link_libraries(D3DRHI
     PRIVATE
