--- a/Hitagi/Core/CMakeLists.txt
+++ b/Hitagi/Core/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library(Core            main.cpp)
+add_subdirectory(Geometries)
+
 add_library(HitagiMath      INTERFACE)
 add_library(MemoryManager   Allocator.cpp Buffer.cpp MemoryManager.cpp)
 add_library(FileIOManager   FileIOManager.cpp)
@@ -13,14 +14,5 @@ target_link_libraries(Timer         PUBLIC Interface)
 target_include_directories(MemoryManager INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(FileIOManager INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(Timer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories(Core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(HitagiMath INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
-
-target_link_libraries(Core
-    PUBLIC
-        HitagiMath
-        MemoryManager
-        FileIOManager
-        Timer   
-)
