fix time sleep period

--- a/Hitagi/Platform/Windows/CMakeLists.txt
+++ b/Hitagi/Platform/Windows/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(GLFWApplication GLFWApplication.cpp)
-target_link_libraries(GLFWApplication PUBLIC BaseApplication PRIVATE glfw)
+target_link_libraries(GLFWApplication PUBLIC BaseApplication PRIVATE glfw Winmm)
 target_include_directories(GLFWApplication INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(HitagiEngineD3D12 D3D12Config.cpp)
