--- a/Hitagi/AssetManager/Parser/CMakeLists.txt
+++ b/Hitagi/AssetManager/Parser/CMakeLists.txt
@@ -21,4 +21,4 @@ target_include_directories(Parser
     PRIVATE
         ${JPEG_INCLUDE_DIR}
 )
-target_compile_options(Parser PRIVATE -Wno-pragma-pack)
+# target_compile_options(Parser PRIVATE -Wno-pragma-pack)
