fix texture path error

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "environment": [],
             "externalConsole": false,
             "logging": {
-                "moduleLoad": false
+                "moduleLoad": true
             }
         }
     ]
