use ispc accelerate matrix calculation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 project(HitagiEngine)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG")
-
+option(USE_ISPC "Use ispc to generate HitagiMath" ON)
 
 find_package(crossguid CONFIG REQUIRED)
 find_package(ZLIB REQUIRED)
@@ -17,7 +15,6 @@ find_package(fmt CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 
 find_package(GTest CONFIG REQUIRED)
-include(CTest)
 
 add_subdirectory(Hitagi)
 add_subdirectory(Test)
