--- a/Hitagi/Graphics/DX12/CMakeLists.txt
+++ b/Hitagi/Graphics/DX12/CMakeLists.txt
@@ -1,6 +1,3 @@
-add_library(CommandListManager CommandListManager.cpp CommandAllocatorPool.cpp)
-add_library(Allocator Allocator.cpp)
-
 add_library(DX12DriverAPI
     DX12DriverAPI.cpp
     CommandAllocatorPool.cpp
@@ -15,6 +12,8 @@ add_library(DX12DriverAPI
     DynamicDescriptorHeap.cpp
 )
 target_link_libraries(DX12DriverAPI
+    PUBLIC
+        GraphicsAPI
     PRIVATE
         d3d12
         dxgi
@@ -23,6 +22,4 @@ target_link_libraries(DX12DriverAPI
 target_include_directories(DX12DriverAPI
     INTERFACE
         ${CMAKE_CURRENT_SOURCE_DIR}
-    PRIVATE
-        "$<TARGET_PROPERTY:HitagiEngine,INTERFACE_INCLUDE_DIRECTORIES>"
 )
