--- a/Hitagi/AssetManager/CmakeLists.txt
+++ b/Hitagi/AssetManager/CmakeLists.txt
@@ -7,7 +7,7 @@ add_library(AssetManager
     SceneObject.cpp
 )
 target_link_libraries(AssetManager PUBLIC FileIOManager Parser HitagiMath PRIVATE crossguid)
-target_include_directories(AssetManager PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} "$<TARGET_PROPERTY:crossguid,INTERFACE_INCLUDE_DIRECTORIES>")
+target_include_directories(AssetManager INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} "$<TARGET_PROPERTY:crossguid,INTERFACE_INCLUDE_DIRECTORIES>")
 
 add_library(SceneManager SceneManager.cpp)
 target_link_libraries(SceneManager PUBLIC AssetManager)
