--- a/Hitagi/Platform/CMakeLists.txt
+++ b/Hitagi/Platform/CMakeLists.txt
@@ -12,7 +12,7 @@ target_link_libraries(Application
 )
 target_include_directories(Application INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
-if(${WIN32})
+if(WIN32)
     # Windows specific code
     add_subdirectory(Windows)
-endif(${WIN32})
+endif(WIN32)
