--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,5 +89,5 @@
         "-DCMAKE_TOOLCHAIN_FILE=E:/workspace/vcpkg/scripts/buildsystems/vcpkg.cmake",
         "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"
     ],
-    "http.proxy": "https://127.0.0.1:8080"
+    "http.proxy": "http://127.0.0.1:1080"
 }
