--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,15 @@
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
+            "environment": [
+                {
+                    // add the directory where our target was built to the PATHs
+                    // it gets resolved by CMake Tools:
+                    "name": "PATH",
+                    "value": "$PATH:${command:cmake.launchTargetDirectory}"
+                },
+            ],
+            "console": "newExternalWindow",
             "logging": {
                 "moduleLoad": true
             }
