♻️ remove primitive type hard code ✨ debug draw line successfully

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(assimp CONFIG REQUIRED)
 find_package(freetype CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
+find_package(magic_enum CONFIG REQUIRED)
 
 find_package(GTest CONFIG REQUIRED)
 include(CTest)
