🐛 make complie successfully under clang-cl

--- a/Hitagi/Graphics/CMakeLists.txt
+++ b/Hitagi/Graphics/CMakeLists.txt
@@ -28,6 +28,7 @@ target_link_libraries(GraphicsManager
     PRIVATE
         SceneManager
         PhysicsManager
+        DebugManager
         $<$<PLATFORM_ID:Windows>:DX12DriverAPI>
         freetype
 )
