♻️ refactor const buffer usage

--- a/Hitagi/Graphics/DX12/CMakeLists.txt
+++ b/Hitagi/Graphics/DX12/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(DX12DriverAPI
     PRIVATE
         d3d12
         dxgi
+        dxguid
         HitagiMath
 )
 target_include_directories(DX12DriverAPI
