--- a/Hitagi/CmakeLists.txt
+++ b/Hitagi/CmakeLists.txt
@@ -3,7 +3,8 @@ add_subdirectory(Core)
 add_subdirectory(AssetManager)
 add_subdirectory(Graphics)
 add_subdirectory(Physics)
-add_subdirectory(Debuger)
+add_subdirectory(Debugger)
 add_subdirectory(HID)
+add_subdirectory(GUI)
 add_subdirectory(GamePlay)
 add_subdirectory(Platform)
