--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(JPEG REQUIRED)
 find_package(libpng CONFIG REQUIRED)
 find_package(assimp CONFIG REQUIRED)
 find_package(freetype CONFIG REQUIRED)
+find_package(imgui CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(magic_enum CONFIG REQUIRED)
