🐛 Fix diffrent user action may be confilct!

--- a/Hitagi/GUI/CMakeLists.txt
+++ b/Hitagi/GUI/CMakeLists.txt
@@ -1,3 +1,8 @@
 add_library(GuiManager GuiManager.cpp)
-target_link_libraries(GuiManager PUBLIC Application AssetManager Timer Interface imgui::imgui spdlog::spdlog)
+target_link_libraries(GuiManager
+    PUBLIC
+        Application
+        imgui::imgui
+    PRIVATE    
+        spdlog::spdlog)
 target_include_directories(GuiManager INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
