--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,1 @@
-External/Linux/lib/** filter=lfs diff=lfs merge=lfs -text
-External/Windows/lib/** filter=lfs diff=lfs merge=lfs -text
-Asset/** filter=lfs diff=lfs merge=lfs -text
+Assets/** filter=lfs diff=lfs merge=lfs -text
