--- a/Hitagi/CmakeLists.txt
+++ b/Hitagi/CmakeLists.txt
@@ -6,5 +6,6 @@ add_subdirectory(Physics)
 add_subdirectory(Debugger)
 add_subdirectory(HID)
 add_subdirectory(GUI)
+add_subdirectory(Editor)
 add_subdirectory(GamePlay)
 add_subdirectory(Platform)
