--- a/Hitagi/AssetManager/CmakeLists.txt
+++ b/Hitagi/AssetManager/CmakeLists.txt
@@ -1,13 +1,35 @@
 add_subdirectory(Parser)
 
+add_library(SceneObject
+    SceneObject.cpp
+    Mesh.cpp
+    Material.cpp
+    Geometry.cpp
+    Light.cpp
+    Camera.cpp
+    Texture.cpp
+)
+target_link_libraries(SceneObject
+    PUBLIC
+        HitagiMath
+        Parser
+        FileIOManager
+)
+target_include_directories(SceneObject INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} "$<TARGET_PROPERTY:crossguid,INTERFACE_INCLUDE_DIRECTORIES>")
+
+add_library(GeometryFactory GeometryFactory.cpp)
+target_link_libraries(GeometryFactory PUBLIC SceneObject)
+target_include_directories(GeometryFactory INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} "$<TARGET_PROPERTY:crossguid,INTERFACE_INCLUDE_DIRECTORIES>")
+
 add_library(AssetManager
     AssetManager.cpp
     Image.cpp
     Scene.cpp
-    SceneObject.cpp
 )
 target_link_libraries(AssetManager 
     PUBLIC
+        SceneObject
+        GeometryFactory
         FileIOManager
         Parser
         HitagiMath
