--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(HitagiEngine)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_CXX_CLANG_TIDY clang-tidy)
+# set(CMAKE_CXX_CLANG_TIDY clang-tidy)
 
 option(USE_ISPC "Use ispc to generate HitagiMath" ON)
 
