--- a/Hitagi/Editor/CMakeLists.txt
+++ b/Hitagi/Editor/CMakeLists.txt
@@ -3,6 +3,7 @@ target_link_libraries(HitagiEditor
     PRIVATE
         SceneManager
         GuiManager
+        DebugManager
         spdlog::spdlog
 )
 target_include_directories(HitagiEditor INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
