--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/build
-/Assets/Textures
-/Assets/Scenes
-/Assets/Motions
-/Temp
+build
+Assets/*
+!Assets/Shaders/
+!Assets/Fonts/
+Temp
 
 # ispc header will be generated during compilation
 *_ispc.h
