--- a/Hitagi/Debugger/CMakeLists.txt
+++ b/Hitagi/Debugger/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(DebugManager DebugManager.cpp)
-target_link_libraries(DebugManager PUBLIC HitagiMath SceneManager PRIVATE Interface AssetManager GuiManager spdlog::spdlog)
+target_link_libraries(DebugManager PUBLIC Math SceneManager PRIVATE Interface AssetManager GuiManager spdlog::spdlog)
 target_include_directories(DebugManager INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
