✅ add file manager test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 project(HitagiEngine)
 
-set(CMAKE_CXX_STANDARD
-    20
-)
+set(CMAKE_CXX_STANDARD 20)
 
 # set(CMAKE_CXX_CLANG_TIDY clang-tidy)
 
@@ -22,6 +20,7 @@ find_package(magic_enum CONFIG REQUIRED)
 find_package(onnxruntime CONFIG REQUIRED)
 
 find_package(GTest CONFIG REQUIRED)
+include(GoogleTest)
 include(CTest)
 
 add_subdirectory(hitagi)
