--- a/hitagi/math/CmakeLists.txt
+++ b/hitagi/math/CmakeLists.txt
@@ -3,15 +3,8 @@ if(USE_ISPC)
 endif(USE_ISPC)
 
 add_library(math INTERFACE)
-target_link_libraries(
-    math
-    INTERFACE fmt::fmt $<$<BOOL:${USE_ISPC}>:ispc_math>
-)
-target_compile_definitions(
-    math
-    INTERFACE $<$<BOOL:${USE_ISPC}>:USE_ISPC>
-)
-target_include_directories(
-    math
-    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
+target_link_libraries(math INTERFACE fmt::fmt $<$<BOOL:${USE_ISPC}>:ispc_math>)
+target_compile_definitions(math INTERFACE $<$<BOOL:${USE_ISPC}>:USE_ISPC>)
+target_include_directories(math INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+add_subdirectory(test)
