--- a/hitagi/math/test/CMakeLists.txt
+++ b/hitagi/math/test/CMakeLists.txt
@@ -1,14 +1,8 @@
 # ===============================================================
 # Math Test
 # ===============================================================
-add_executable(
-    math_test
-    math_test.cpp
-)
-target_link_libraries(
-    math_test
-    PRIVATE math GTest::gtest
-)
+add_executable(math_test math_test.cpp)
+target_link_libraries(math_test PRIVATE math test_utils)
 add_test(
     NAME TEST_math
     COMMAND math_test
