--- a/hitagi/debugger/CmakeLists.txt
+++ b/hitagi/debugger/CmakeLists.txt
@@ -1,13 +1,16 @@
-add_library(
-    debug_manager
+add_library(debug_manager
     src/debug_manager.cpp
 )
-target_link_libraries(
-    debug_manager
-    PUBLIC math scene_manager
-    PRIVATE asset_manager gui_manager spdlog::spdlog
+target_link_libraries(debug_manager
+    PUBLIC
+        math
+        scene_manager
+    PRIVATE
+        asset_manager
+        gui_manager
+        spdlog::spdlog
 )
-target_include_directories(
-    debug_manager
-    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+target_include_directories(debug_manager
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
