--- a/hitagi/gameplay/CmakeLists.txt
+++ b/hitagi/gameplay/CmakeLists.txt
@@ -1,5 +1,5 @@
 add_library(game_logic INTERFACE)
-target_include_directories(
-    game_logic
-    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include
+target_include_directories(game_logic
+    INTERFACE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
