--- a/hitagi/resource/CmakeLists.txt
+++ b/hitagi/resource/CmakeLists.txt
@@ -1,5 +1,4 @@
-add_library(
-    parser
+add_library(parser
     src/parser/bmp.cpp
     src/parser/assimp.cpp
     src/parser/jpeg.cpp
@@ -8,24 +7,24 @@ add_library(
     src/parser/bvh.cpp
 )
 
-target_link_libraries(
-    parser
-    PRIVATE core
-            math
-            ${JPEG_LIBRARIES}
-            png
-            assimp::assimp
-            spdlog::spdlog
+target_link_libraries(parser
+    PRIVATE
+        core
+        math
+        ${JPEG_LIBRARIES}
+        png
+        assimp::assimp
+        spdlog::spdlog
 )
-target_include_directories(
-    parser
-    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
-    PRIVATE ${JPEG_INCLUDE_DIR}
-            "$<TARGET_PROPERTY:graphics,INTERFACE_INCLUDE_DIRECTORIES>"
+target_include_directories(parser
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    PRIVATE
+        ${JPEG_INCLUDE_DIR}
+        "$<TARGET_PROPERTY:graphics,INTERFACE_INCLUDE_DIRECTORIES>"
 )
 
-add_library(
-    asset_manager
+add_library(asset_manager
     src/asset_manager.cpp
     src/scene_object.cpp
     src/animation.cpp
@@ -41,21 +40,26 @@ add_library(
     src/scene_node.cpp
 )
 
-target_link_libraries(
-    asset_manager
-    PUBLIC core parser math
-    PRIVATE crossguid magic_enum::magic_enum
+target_link_libraries(asset_manager
+    PUBLIC 
+        core
+        parser
+        math
+    PRIVATE 
+        crossguid
+        magic_enum::magic_enum
 )
-target_include_directories(
-    asset_manager
-    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
-           "$<TARGET_PROPERTY:crossguid,INTERFACE_INCLUDE_DIRECTORIES>"
-           "$<TARGET_PROPERTY:graphics,INTERFACE_INCLUDE_DIRECTORIES>"
+target_include_directories(asset_manager
+    PUBLIC 
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        "$<TARGET_PROPERTY:crossguid,INTERFACE_INCLUDE_DIRECTORIES>"
+        "$<TARGET_PROPERTY:graphics,INTERFACE_INCLUDE_DIRECTORIES>"
 )
 
-add_library(
-    scene_manager src/scene_manager.cpp src/animation_manager.cpp
-                  src/geometry_factory.cpp
+add_library(scene_manager 
+    src/scene_manager.cpp 
+    src/animation_manager.cpp
+    src/geometry_factory.cpp
 )
 target_link_libraries(scene_manager PUBLIC asset_manager)
 
