--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,7 +30,12 @@ jobs:
     - name: Download ISPC (MacOS)
       if: runner.os == 'macOS'
       run: wget "https://github.com/ispc/ispc/releases/download/v1.17.0/ispc-v1.17.0-macOS.tar.gz" && tar -zxvf ispc-v1.17.0-macOS.tar.gz && echo "ispc-v1.17.0-macOS/bin" >> $GITHUB_PATH
-    
+      
+    - name: Restore artifacts, or setup vcpkg (do not install any package)
+      uses: lukka/run-vcpkg@v10
+      with:
+        vcpkgGitCommitId: 'af2287382b1991dbdcb7e5112d236f3323b9dd7a'
+        
     - name: Run CMake
       uses: lukka/run-cmake@v10
       with:
