🔧 add msvc build preset 🐛 fix header missing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,5 +101,6 @@
     },
     "cmake.debugConfig": {
         "cwd": "${workspaceFolder}"
-    }
+    },
+    "C_Cpp.intelliSenseEngineFallback": "Enabled"
 }
