--- a/hitagi/math/test/CMakeLists.txt
+++ b/hitagi/math/test/CMakeLists.txt
@@ -3,8 +3,4 @@
 # ===============================================================
 add_executable(math_test math_test.cpp)
 target_link_libraries(math_test PRIVATE math test_utils)
-add_test(
-    NAME TEST_math
-    COMMAND math_test
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-)
+gtest_discover_tests(math_test WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
