--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,4 +1,4 @@
-name: BuildTest
+name: build and test
 
 on:
   push:
@@ -6,8 +6,6 @@ on:
   pull_request:
     branches: [ dev ]
 
-env:
-  BUILD_TYPE: Release
 
 jobs:
   build:
@@ -38,12 +36,19 @@ jobs:
       with:
         vcpkgGitCommitId: 'af2287382b1991dbdcb7e5112d236f3323b9dd7a'
         
-    - name: Run CMake
+    - name: Build with clang
       uses: lukka/run-cmake@v10
       with:
-        configurePreset: 'ninja-multi-vcpkg'
-        buildPreset: 'ninja-multi-vcpkg-release'
-        testPreset: 'ninja-multi-vcpkg-release'
+        configurePreset: 'Clang'
+        buildPreset: 'Clang (Release)'
+        testPreset: 'Clang Test'
+    
+    - name: Build with MSVC
+      uses: lukka/run-cmake@v10
+      with:
+        configurePreset: 'Clang'
+        buildPreset: 'MSVC (Release)'
+        testPreset: 'MSVC Test'
         
     
   
